--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
+        <activity android:name=".GameActivity"></activity>
+        <activity android:name=".HowActivity" />
         <activity
             android:name=".SplashActivity"
             android:screenOrientation="portrait"
@@ -21,9 +23,12 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".GameActivity"></activity>
-        <activity android:name=".HowActivity" />
         <activity android:name=".MainActivity" />
+        <activity android:name=".Count3Activity" />
+        <activity android:name=".Count2Activity" />
+        <activity android:name=".Count1Activity" />
+        <activity android:name=".CountStartActivity" />
+
     </application>
 
 </manifest>
