Complete PauseMenuItem, InputField, GameOver

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,7 +24,10 @@
         </activity>
 
         <activity android:name=".MainActivity" />
-        <activity android:name=".GameActivity"/>
+        <activity android:name=".GameActivity"
+            android:windowSoftInputMode="adjustResize">
+
+        </activity>
 
     </application>
 
